# carnival

./: .flake8  .gitignore  .readthedocs.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  carnival_file.py  carnival_tasks_example.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
carnival/: __init__.py  __main__.py  cli.py  connection.py  context.py  exceptions.py  global_context.py  host.py  internal_tasks.py  log.py  plugins.py  role.py  step.py  task.py  tasks.py  tasks_loader.py  templates.py  utils.py
carnival/cmd/: __init__.py  apt.py  cli.py  docker.py  fs.py  system.py  systemd.py  transfer.py
carnival/core/: host.py  inventory.py  role.py  tasks.py  utils.py
carnival/host/: __init__.py  _base.py  _local_connection.py  _ssh_connection.py  connection.py  local.py  results.py  ssh.py
carnival/hosts/: __init__.py  base.py  local.py  ssh.py
carnival/secrets/: __init__.py
carnival/secrets_manager/: __init__.py  base.py
docs/: 0 - overview.md  1 - inventory.md  1 - role.md  1 - step.md  1 - task.md  2 - commands.md  2 - tasks.md  3 - commands.md  3 - secrets.md  4 - secrets.md
docs_old/: 0 - overview.md  1 - task.md  2 - step.md
testdata/: Dockerfile_centos  Dockerfile_ubuntu  carnival_file_test.py  docker-compose.yml
tests/: conftest.py  test_cli.py  test_connection.py  test_global_context.py  test_host.py  test_internal_tasks.py  test_log.py  test_secrets_manager.py  test_step.py  test_task.py  test_tasks_loader.py  test_templates.py  test_utils.py
(+52 files in other folders)
